add crypto and currency amount
