# src/schemas/offer.schema.ts
@@ -7,6 +7,8 @@ const offerSchema = new Schema({
     type: {type: String, required: true, enum: Object.values(OfferTypes) },
     crypto: {type: String, required: true, enum: Object.values(CryptoCurrencies) },
     currency: {type: String, required: true, enum: Object.values(Currencies) },
+    currencyAmount: {type: Number, required: true},
+    cryptoAmount: {type: Number, required: true},
 })
 
 export default offerSchema
